[project]
name = "impulse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "colorama>=0.4.6",
    "fake-useragent>=2.2.0",
    "humanfriendly>=10.0",
    "requests>=2.32.5",
    "scapy>=2.6.1",
    "wget>=3.2",
]


[tool.ruff.lint]
select = ["ALL"]
ignore = ["INP001", "D100", "S311", "PTH123"]
